@@ -2,6 +2,7 @@ AOL Prebid 1.2.0
 ----------------
 Updated to Prebid 0.12.0.
 Fixed sorting of per-adapter timeouts.
+Fixed ES6 features which require a polyfill.
 
 
 AOL Prebid 1.1.0
